feat: 3 image processors: crop, reverse colors and remove background